Make correctif for player-table deck alignment

--- a/src/player-table.scss
+++ b/src/player-table.scss
@@ -44,7 +44,7 @@
          --height: 154px !important;
 
          &[data-empty="false"] {
-            border: none;
+            border-color: transparent;
          }
       }
    }
