--- a/src/table-center.scss
+++ b/src/table-center.scss
@@ -14,6 +14,9 @@
       width: var(--width);
       height: var(--height);
       border-radius: 5px;
-      border: 1px solid darkslategray;
+
+      &:empty {
+         border: 1px solid darkslategray;
+      }
    }
 }
